updated mods; pinned some mod versions
create & some addons pinned until 6.0.7 is universal
loot beams & dep pinned as later versions add unnecessary shader mechanics
spyglass improvements pinned for server incompat issue
protection pixel pinned; later versions use kleider's custom renderer, which lags players looking at each other and has cosmetic armor incompat

--- a/mods/create-connected.pw.toml
+++ b/mods/create-connected.pw.toml
@@ -1,6 +1,7 @@
 name = "Create: Connected"
 filename = "create_connected-1.1.7-mc1.20.1-all.jar"
 side = "both"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/Vg5TIO6d/versions/HMzC945H/create_connected-1.1.7-mc1.20.1-all.jar"
