--- a/mods/create-air-ducts.pw.toml
+++ b/mods/create-air-ducts.pw.toml
@@ -1,6 +1,7 @@
 name = "Create: Air Ducts"
 filename = "create_airducts-1.20.1-1.0.4.jar"
 side = "both"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/9XPqZpTX/versions/GgJrOujJ/create_airducts-1.20.1-1.0.4.jar"
