--- a/mods/create-encased.pw.toml
+++ b/mods/create-encased.pw.toml
@@ -1,6 +1,7 @@
 name = "Create Encased"
 filename = "Create Encased-1.20.1-1.7.2-fix1.jar"
 side = "both"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/hSSqdyU1/versions/usE25rBf/Create%20Encased-1.20.1-1.7.2-fix1.jar"
