--- a/mods/create-qol.pw.toml
+++ b/mods/create-qol.pw.toml
@@ -1,6 +1,7 @@
 name = "Create: Quality of Life"
 filename = "Create Quality of Life-1.20.1-1.6.1.jar"
 side = "both"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/hezpkOYP/versions/LMkMeQCX/Create%20Quality%20of%20Life-1.20.1-1.6.1.jar"
