--- a/mods/create.pw.toml
+++ b/mods/create.pw.toml
@@ -1,6 +1,7 @@
 name = "Create"
 filename = "create-1.20.1-6.0.6.jar"
 side = "both"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/LNytGWDc/versions/JjPQsQVw/create-1.20.1-6.0.6.jar"
