--- a/mods/figura.pw.toml
+++ b/mods/figura.pw.toml
@@ -1,6 +1,7 @@
 name = "Figura"
 filename = "figura-0.1.5+1.20.1-forge-mc.jar"
 side = "client"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/s9gIPDom/versions/4HqSmvZ6/figura-0.1.5%2B1.20.1-forge-mc.jar"
