--- a/mods/loot-beams-refork.pw.toml
+++ b/mods/loot-beams-refork.pw.toml
@@ -1,6 +1,7 @@
 name = "Loot Beams: Refork"
 filename = "Loot Beams Refork-forge-1.20.1-2.5.12.jar"
 side = "client"
+pin = true
 
 [download]
 hash-format = "sha1"
