--- a/mods/nirvana-library.pw.toml
+++ b/mods/nirvana-library.pw.toml
@@ -1,6 +1,7 @@
 name = "Nirvana Library"
 filename = "Nirvana-Lib-forge-1.20.1-1.1.8.jar"
 side = "client"
+pin = true
 
 [download]
 hash-format = "sha1"
