--- a/mods/protection-pixel.pw.toml
+++ b/mods/protection-pixel.pw.toml
@@ -1,6 +1,7 @@
 name = "Create: Protection Pixel"
 filename = "protection_pixel-1.1.6-forge-1.20.1.jar"
 side = "both"
+pin = true
 
 [download]
 hash-format = "sha1"
