--- a/mods/sophisticated-backpacks.pw.toml
+++ b/mods/sophisticated-backpacks.pw.toml
@@ -1,6 +1,7 @@
 name = "Sophisticated Backpacks"
 filename = "sophisticatedbackpacks-1.20.1-3.24.10.1404.jar"
 side = "both"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/TyCTlI4b/versions/CC5uOKlH/sophisticatedbackpacks-1.20.1-3.24.10.1404.jar"
