--- a/mods/sophisticated-core.pw.toml
+++ b/mods/sophisticated-core.pw.toml
@@ -1,6 +1,7 @@
 name = "Sophisticated Core"
 filename = "sophisticatedcore-1.20.1-1.2.105.1230.jar"
 side = "both"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/nmoqTijg/versions/Zcs5W3Dd/sophisticatedcore-1.20.1-1.2.105.1230.jar"
