Changed jeargh to client-side only

--- a/mods/just-enough-resources-profiler-(jeargh).pw.toml
+++ b/mods/just-enough-resources-profiler-(jeargh).pw.toml
@@ -1,6 +1,6 @@
 name = "Just Enough Resources Profiler (JEARGH)"
 filename = "jeargh-1.20.1-1.0.3.jar"
-side = "server"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/wOVCyncE/versions/DkaFp61D/jeargh-1.20.1-1.0.3.jar"
