--- a/pack.toml
+++ b/pack.toml
@@ -14,5 +14,5 @@ minecraft = "1.20.1"
 
 [options]
 acceptable-game-versions = "1.20"
-datapack-folder = "configs\\paxi\\datapacks"
+datapack-folder = "config\\paxi\\datapacks"
 no-internal-hashes = true
